# static_math

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README.rst  license.txt
.github/workflows/: deploy-to-wiki.yml
docs/: Bitwise-operations.md  Common-mathematical-functions.md  Complex-numbers.md  Home.md  Integral-constants.md  Mathematical-constants.md  Miscellaneous-functions.md  Rational-numbers.md  Trigonometric-and-hyperbolic-functions.md  Vectors.md  _Sidebar.md
include/static_math/: array.h  array.inl  bit.h  cmath.h  cmath.inl  compare.h  complex.h  complex.inl  constant.h  constants.h  formula.h  formula.inl  matrix.h  matrix.inl  rational.h  rational.inl  static_math.h  trigonometry.h  trigonometry.inl  vector.h  vector.inl
include/static_math/detail/: bit.inl  can_fit.h  cmath.inl  complex.inl  constant.inl  core.h  formula.inl  logical_traits.h  parse.h  rational.inl  trigonometry.inl  vector.inl
include/static_math/utils/: compare.h  type_traits.h
test/: array.cpp  bit.cpp  cmath.cpp  complex.cpp  constant.cpp  formula.cpp  matrix.cpp  rational.cpp  trigonometry.cpp  vector.cpp
